fix: resize avatar.jpg

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <main>
     <div class="conteiner">
         <section><h2>Brief information about me:</h2>
-<img src="./avatar.jpg" width="10%" height="30%" alt="">
+<img src="./avatar.jpg" width="20%" height="auto" alt="">
 <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.</br> I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".</br>I work and live in Kyiv</p>
 </section>
 <article>
