fix: resize and fix tag

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <main>
     <div class="conteiner">
         <section><h2>Brief information about me:</h2>
-<img src="./avatar.jpg" width="25%" height="auto" alt="">
-<p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.</br> I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".</br>I work and live in Kyiv</p>
+<img src="./avatar.jpg" width="262" height="373" alt="avatar">
+<p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
 </section>
 <article>
     <h2>Education</h2>
