fix: resize and fix atribute

--- a/index.html
+++ b/index.html
@@ -10,8 +10,82 @@
 </head>
 
 <body>
-    <p>мой СV </p>
-    <img src="./avatar.PNG" alt="">
+    <header>
+        <div class="conteiner">
+        <h1>NFortis-CV</h1>
+        <nav class="page-menu">
+            <ul class="menu-list">
+              <li class="menu-item"><a href="#" class="menu-link">ABOUT ME</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">SKILLS</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">PORTFOLIO</a></li>
+              <li class="menu-item"><a href="#" class="menu-link">CONTACT</a></li>
+            </ul>
+          </nav>
+ </div>
+    
+</header>
+<main>
+    <div class="conteiner">
+        <section><h2>Brief information about me:</h2>
+<img src="./avatar.jpg" width="262" height="373" alt="avatar">
+<p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
+</section>
+<article>
+    <h2>Education</h2>
+    <ul>
+        <li>Kyiv National National University of Construction and Architecture</li>
+        <li>Kyiv National Economic University named after Vadym Hetman</li>
+    </ul>
+</article>
+<article>
+    <h2>Skills:</h2>
+    <ul>
+        <li>HTML-basic</li>
+        <li>CSS-basic</li>
+        <li>JS-basic</li>
+        <li>SQL-basic</li>
+    </ul>
+</article>
+<h2>Projects:</h2>
+<ul>
+    <li>Mens-bags.com.ua</li>
+    <li>Jz.com.ua</li>
+    <li>Puer.net.ua</li>
+    <li>Alvi.org.ua</li>
+    
+</ul>
+<article>
+    <h2>language proficiency:</h2>
+    <ul>
+        <li>Ukrainian</li>
+        <li>Russian</li>
+        <li>English (with translator)</li>
+    </ul>
+</article>
+<article>
+    <h2>Code example:</h2>
+    <code>
+        Your viewport width is '+viewportwidth+'x'+viewportheight+'');
+
+        //-->
+    </code>
+</article>
+<article>
+    <address>
+     <h2>Contact Info:</h2>
+        <ul>
+          <li>Email: <a href="mailto:nfort.info@gmail.com">nfort.info@gmail.com</a></li>
+          <li>Phone: <a href="tel:+380933334455">380933334455</a></li>
+          <li>Github: <a href="https://github.com/nfortis">NFortis</a></li>
+        </ul>
+    </address>
+</article>
+</main>
+<footer>
+    <p>Created by NFortis.2022 <a href="https://github.com/nfortis">Github:NFortis</a> &copy;</p>
+
+    <a href="https://rs.school/js-stage0/"><img src="https://rs.school/images/rs_school_js.svg" width="100" height="33" alt="rs app"></a>
+  </footer>
 </body>
 
 </html>
