fix: fixed code html and css

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet" type="text/css">
-    <title>My CV</title>
+    <link rel="icon" href="assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet"> 
+
+    <title>NFortis CV</title>
 </head>
 
 <body>
     <header>
-        <div class="conteiner">
-        <h1>NFortis-CV</h1>
+        <div class="container">
+        <h1>Nfortis Junior Frontend Developer</h1>
         <nav class="page-menu">
             <ul class="menu-list">
               <li class="menu-item"><a href="#" class="menu-link">ABOUT ME</a></li>
@@ -21,13 +26,13 @@
               <li class="menu-item"><a href="#" class="menu-link">CONTACT</a></li>
             </ul>
           </nav>
- </div>
-    
+        </div>
 </header>
+
 <main>
-    <div class="conteiner">
+    <div class="container">
         <section><h2>Brief information about me:</h2>
-<img src="./avatar.jpg" width="262" height="373" alt="avatar">
+<img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
 <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
 </section>
 <article>
@@ -80,11 +85,14 @@
         </ul>
     </address>
 </article>
+</div>
 </main>
 <footer>
+    <div class="container">
     <p>Created by NFortis.2022 <a href="https://github.com/nfortis">Github:NFortis</a> &copy;</p>
 
     <a href="https://rs.school/js-stage0/"><img src="https://rs.school/images/rs_school_js.svg" width="100" height="33" alt="rs app"></a>
+</div>
   </footer>
 </body>
 
