--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <header>
         <div class="container">
         <h1>Nfortis Junior Frontend Developer</h1>
-        <nav class="page-menu">
-            <ul class="menu-list">
-              <li class="menu-item"><a href="#" class="menu-link">ABOUT ME</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">SKILLS</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">PORTFOLIO</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">CONTACT</a></li>
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#About me" class="nav-link">About me</a></li>
+              <li class="nav-item"><a href="#Skills" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
+              <li class="nav-item"><a href="#languages" class="nav-link">languages</a></li>
+              <li class="nav-item"><a href="#Contact" class="nav-link">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -31,9 +32,14 @@
 
 <main>
     <div class="container">
-        <section><h2>Brief information about me:</h2>
+        <section >
+            <div class="avatar">
 <img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
+</div>
+    <article class="about-me">
+<h2>About me:</h2>      
 <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
+   </article>
 </section>
 <article>
     <h2>Education</h2>
@@ -43,7 +49,7 @@
     </ul>
 </article>
 <article>
-    <h2>Skills:</h2>
+    <h2 id="Skills">Skills:</h2>
     <ul>
         <li>HTML-basic</li>
         <li>CSS-basic</li>
@@ -51,7 +57,7 @@
         <li>SQL-basic</li>
     </ul>
 </article>
-<h2>Projects:</h2>
+<h2 id="Projects">Projects:</h2>
 <ul>
     <li>Mens-bags.com.ua</li>
     <li>Jz.com.ua</li>
@@ -60,7 +66,7 @@
     
 </ul>
 <article>
-    <h2>language proficiency:</h2>
+    <h2 id="languages">languages:</h2>
     <ul>
         <li>Ukrainian</li>
         <li>Russian</li>
@@ -77,7 +83,7 @@
 </article>
 <article>
     <address>
-     <h2>Contact Info:</h2>
+     <h2 id="Contact">Contact:</h2>
         <ul>
           <li>Email: <a href="mailto:nfort.info@gmail.com">nfort.info@gmail.com</a></li>
           <li>Phone: <a href="tel:+380933334455">380933334455</a></li>
