--- a/index.html
+++ b/index.html
@@ -6,29 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet" type="text/css">
-    <title>My CV</title>
+    <link rel="icon" href="assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet"> 
+
+    <title>NFortis CV</title>
 </head>
 
 <body>
     <header>
-        <div class="conteiner">
-        <h1>NFortis-CV</h1>
-        <nav class="page-menu">
-            <ul class="menu-list">
-              <li class="menu-item"><a href="#" class="menu-link">ABOUT ME</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">SKILLS</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">PORTFOLIO</a></li>
-              <li class="menu-item"><a href="#" class="menu-link">CONTACT</a></li>
+        <div class="container">
+        <h1>Nfortis Junior Frontend Developer</h1>
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#About me" class="nav-link">About me</a></li>
+              <li class="nav-item"><a href="#Skills" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
+              <li class="nav-item"><a href="#languages" class="nav-link">languages</a></li>
+              <li class="nav-item"><a href="#Contact" class="nav-link">Contact</a></li>
             </ul>
           </nav>
- </div>
-    
+        </div>
 </header>
+
 <main>
-    <div class="conteiner">
-        <section><h2>Brief information about me:</h2>
-<img src="./avatar.jpg" width="262" height="373" alt="avatar">
+    <div class="container">
+        <section >
+            <div class="avatar">
+<img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
+</div>
+    <article class="about-me">
+<h2>About me:</h2>      
 <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
+   </article>
 </section>
 <article>
     <h2>Education</h2>
@@ -38,7 +49,7 @@
     </ul>
 </article>
 <article>
-    <h2>Skills:</h2>
+    <h2 id="Skills">Skills:</h2>
     <ul>
         <li>HTML-basic</li>
         <li>CSS-basic</li>
@@ -46,7 +57,7 @@
         <li>SQL-basic</li>
     </ul>
 </article>
-<h2>Projects:</h2>
+<h2 id="Projects">Projects:</h2>
 <ul>
     <li>Mens-bags.com.ua</li>
     <li>Jz.com.ua</li>
@@ -55,7 +66,7 @@
     
 </ul>
 <article>
-    <h2>language proficiency:</h2>
+    <h2 id="languages">languages:</h2>
     <ul>
         <li>Ukrainian</li>
         <li>Russian</li>
@@ -72,7 +83,7 @@
 </article>
 <article>
     <address>
-     <h2>Contact Info:</h2>
+     <h2 id="Contact">Contact:</h2>
         <ul>
           <li>Email: <a href="mailto:nfort.info@gmail.com">nfort.info@gmail.com</a></li>
           <li>Phone: <a href="tel:+380933334455">380933334455</a></li>
@@ -80,11 +91,14 @@
         </ul>
     </address>
 </article>
+</div>
 </main>
 <footer>
+    <div class="container">
     <p>Created by NFortis.2022 <a href="https://github.com/nfortis">Github:NFortis</a> &copy;</p>
 
     <a href="https://rs.school/js-stage0/"><img src="https://rs.school/images/rs_school_js.svg" width="100" height="33" alt="rs app"></a>
+</div>
   </footer>
 </body>
 
