--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
         <div class="container">
         <h1>Nfortis Junior Frontend Developer</h1>
-        <nav class="nav">
+        <nav class="nav-menu">
             <ul class="nav-list">
-              <li class="nav-item"><a href="#About me" class="nav-link">About me</a></li>
+              <li class="nav-item"><a href="#About-me" class="nav-link">About me</a></li>
               <li class="nav-item"><a href="#Skills" class="nav-link">Skills</a></li>
               <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
               <li class="nav-item"><a href="#languages" class="nav-link">languages</a></li>
@@ -33,11 +33,11 @@
 <main>
     <div class="container">
         <section >
-            <div class="avatar">
-<img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
-</div>
-    <article class="about-me">
-<h2>About me:</h2>      
+            
+    <img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
+
+    <article class="about me">
+<h2 id="About-me">About me:</h2>      
 <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
    </article>
 </section>
