fix: code layout 14-05

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet">
 
     <title>NFortis CV</title>
 </head>
@@ -17,89 +17,96 @@
 <body>
     <header>
         <div class="container">
-        <h1>Nfortis Junior Frontend Developer</h1>
-        <nav class="nav-menu">
-            <ul class="nav-list">
-              <li class="nav-item"><a href="#About-me" class="nav-link">About me</a></li>
-              <li class="nav-item"><a href="#Skills" class="nav-link">Skills</a></li>
-              <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
-              <li class="nav-item"><a href="#languages" class="nav-link">languages</a></li>
-              <li class="nav-item"><a href="#Contact" class="nav-link">Contact</a></li>
-            </ul>
-          </nav>
+            <h1>Nfortis Junior Frontend Developer</h1>
+            <nav class="nav-menu">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#About-me" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#Skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">languages</a></li>
+                    <li class="nav-item"><a href="#Contact" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-</header>
+    </header>
 
-<main>
-    <div class="container">
-        <section >
-            
-    <img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
+    <main>
+        <div class="container">
+            <section>
 
-    <article class="about me">
-<h2 id="About-me">About me:</h2>      
-<p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
-   </article>
-</section>
-<article>
-    <h2>Education</h2>
-    <ul>
-        <li>Kyiv National National University of Construction and Architecture</li>
-        <li>Kyiv National Economic University named after Vadym Hetman</li>
-    </ul>
-</article>
-<article>
-    <h2 id="Skills">Skills:</h2>
-    <ul>
-        <li>HTML-basic</li>
-        <li>CSS-basic</li>
-        <li>JS-basic</li>
-        <li>SQL-basic</li>
-    </ul>
-</article>
-<h2 id="Projects">Projects:</h2>
-<ul>
-    <li>Mens-bags.com.ua</li>
-    <li>Jz.com.ua</li>
-    <li>Puer.net.ua</li>
-    <li>Alvi.org.ua</li>
-    
-</ul>
-<article>
-    <h2 id="languages">languages:</h2>
-    <ul>
-        <li>Ukrainian</li>
-        <li>Russian</li>
-        <li>English (with translator)</li>
-    </ul>
-</article>
-<article>
-    <h2>Code example:</h2>
-    <code>
+                <img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
+
+                <article class="about me">
+                    <h2 id="About-me">About me:</h2>
+                    <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I
+                        cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
+                </article>
+            </section>
+            <article>
+                <h2>Education</h2>
+                <ul>
+                    <li>Kyiv National National University of Construction and Architecture</li>
+                    <li>Kyiv National Economic University named after Vadym Hetman</li>
+                </ul>
+            </article>
+            <article>
+                <h2 id="Skills">Skills:</h2>
+                <ul>
+                    <li>HTML-basic</li>
+                    <li>CSS-basic</li>
+                    <li>JS-basic</li>
+                    <li>SQL-basic</li>
+                </ul>
+            </article>
+            <h2 id="Projects">Projects:</h2>
+            <ul>
+                <li>Mens-bags.com.ua</li>
+                <li>Jz.com.ua</li>
+                <li>Puer.net.ua</li>
+                <li>Alvi.org.ua</li>
+
+            </ul>
+            <article>
+                <h2 id="languages">languages:</h2>
+                <ul>
+                    <li>Ukrainian</li>
+                    <li>Russian</li>
+                    <li>English (with translator)</li>
+                </ul>
+            </article>
+            <article>
+                <h2>Code example:</h2>
+                <code>
         Your viewport width is '+viewportwidth+'x'+viewportheight+'');
 
         //-->
     </code>
-</article>
-<article>
-    <address>
-     <h2 id="Contact">Contact:</h2>
-        <ul>
-          <li>Email: <a href="mailto:nfort.info@gmail.com">nfort.info@gmail.com</a></li>
-          <li>Phone: <a href="tel:+380933334455">380933334455</a></li>
-          <li>Github: <a href="https://github.com/nfortis">NFortis</a></li>
-        </ul>
-    </address>
-</article>
-</div>
-</main>
-<footer>
-    <div class="container">
-    <p>Created by NFortis.2022 <a href="https://github.com/nfortis">Github:NFortis</a> &copy;</p>
+            </article>
+            <article>
+                <address>
+                    <h2 id="Contact">Contact:</h2>
+                    <ul>
+                        <li>Email: <a href="mailto:nfort.info@gmail.com">nfort.info@gmail.com</a></li>
+                        <li>Phone: <a href="tel:+380933334455">380933334455</a></li>
+                        <li>Github: <a href="https://github.com/nfortis">NFortis</a></li>
+                    </ul>
+                </address>
+            </article>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="container-footer">
 
-    <a href="https://rs.school/js-stage0/"><img src="https://rs.school/images/rs_school_js.svg" width="100" height="33" alt="rs app"></a>
-</div>
-  </footer>
+                <p class="gh-link">Created by NFortis.2022&copy;<a href="https://github.com/nfortis">Github:NFortis</a>
+                </p>
+
+
+                <a class="rss-link" href="https://rs.school/js-stage0/"><img
+                        src="https://rs.school/images/rs_school_js.svg" width="100" height="33" alt="rs app"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
