fix: code layout 1-00

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Nfortis Junior Frontend Developer</h1>
+            <h1 class="h1-class"><span class="h1-accent">NFortis</span> Junior Frontend Developer</h1>
             <nav class="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#About-me" class="nav-link">About me</a></li>
@@ -34,7 +34,7 @@
         <div class="container">
 
 
-            <img src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
+            <img class="avatar" src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
 
             <article class="about me">
                 <h2 id="About-me">About me:</h2>
@@ -76,7 +76,7 @@
             </article>
             <article>
                 <h2>Code example:</h2>
-                <code>
+                <code class="code-ex">
         Your viewport width is '+viewportwidth+'x'+viewportheight+'');
 
         //-->
