--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <nav class="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#About-me" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#Education" class="nav-link">Education</a></li>
                     <li class="nav-item"><a href="#Skills" class="nav-link">Skills</a></li>
                     <li class="nav-item"><a href="#Projects" class="nav-link">Projects</a></li>
                     <li class="nav-item"><a href="#languages" class="nav-link">languages</a></li>
@@ -36,20 +37,20 @@
 
             <img class="avatar" src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
 
-            <article class="about me">
+            <article class="about me" id="beige-col">
                 <h2 id="About-me">About me:</h2>
                 <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I
                     cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
             </article>
 
-            <article>
-                <h2>Education</h2>
+            <article id="beige-col">
+                <h2 id="Education">Education</h2>
                 <ul>
                     <li>Kyiv National National University of Construction and Architecture</li>
                     <li>Kyiv National Economic University named after Vadym Hetman</li>
                 </ul>
             </article>
-            <article>
+            <article id="beige-col">
                 <h2 id="Skills">Skills:</h2>
                 <ul>
                     <li>HTML-basic</li>
@@ -58,15 +59,17 @@
                     <li>SQL-basic</li>
                 </ul>
             </article>
-            <h2 id="Projects">Projects:</h2>
-            <ul>
-                <li>Mens-bags.com.ua</li>
-                <li>Jz.com.ua</li>
-                <li>Puer.net.ua</li>
-                <li>Alvi.org.ua</li>
+            <article id="beige-col">
+                <h2 id="Projects">Projects:</h2>
+                <ul>
+                    <li>Mens-bags.com.ua</li>
+                    <li>Jz.com.ua</li>
+                    <li>Puer.net.ua</li>
+                    <li>Alvi.org.ua</li>
 
-            </ul>
-            <article>
+                </ul>
+            </article>
+            <article id="beige-col">
                 <h2 id="languages">languages:</h2>
                 <ul>
                     <li>Ukrainian</li>
@@ -74,7 +77,7 @@
                     <li>English (with translator)</li>
                 </ul>
             </article>
-            <article>
+            <article id="beige-col-1">
                 <h2>Code example:</h2>
                 <code class="code-ex">
         Your viewport width is '+viewportwidth+'x'+viewportheight+'');
@@ -82,7 +85,7 @@
         //-->
     </code>
             </article>
-            <article>
+            <article id="beige-col">
                 <h2 id="Contact">Contact:</h2>
                 <ul>
                     <li>Email: <a href="mailto:nfort.info@gmail.com">nfort.info@gmail.com</a></li>
