--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                     cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
             </article>
 
-            <article id="beige-col">
+            <article>
                 <h2 id="Education">Education</h2>
                 <ul>
                     <li>Kyiv National National University of Construction and Architecture</li>
                     <li>Kyiv National Economic University named after Vadym Hetman</li>
                 </ul>
             </article>
-            <article id="beige-col">
+            <article>
                 <h2 id="Skills">Skills:</h2>
                 <ul>
                     <li>HTML-basic</li>
@@ -59,7 +59,7 @@
                     <li>SQL-basic</li>
                 </ul>
             </article>
-            <article id="beige-col">
+            <article>
                 <h2 id="Projects">Projects:</h2>
                 <ul>
                     <li>Mens-bags.com.ua</li>
@@ -69,7 +69,7 @@
 
                 </ul>
             </article>
-            <article id="beige-col">
+            <article>
                 <h2 id="languages">languages:</h2>
                 <ul>
                     <li>Ukrainian</li>
