fix: fix code 2-32

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <img class="avatar" src="./assets/img/avatar.jpg" width="262" height="373" alt="avatar">
 
-            <article class="about me" id="beige-col">
+            <article class="about me">
                 <h2 id="About-me">About me:</h2>
                 <p>Pozdnyakov Nikolai Aleksandrovich, a private entrepreneur.I work in the field of e-commerce, I
                     cooperate with "Hotline.ua", "Rozetka.ua".I work and live in Kyiv</p>
@@ -85,7 +85,7 @@
         //-->
     </code>
             </article>
-            <article id="beige-col">
+            <article>
                 <h2 id="Contact">Contact:</h2>
                 <ul>
                     <li>Email: <a href="mailto:nfort.info@gmail.com">nfort.info@gmail.com</a></li>
